@@ -1,3 +1,6 @@
+2007-03-06  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/tablewriter.hxx:
+  - A bit more explanation about column lists
 2007-02-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
  src/connection_base.cxx:
   - Compile fix for libpq without PQserverVersion()
